<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.brandon.rika.ffr.Workout">

    <TextView android:text="@string/workout_count" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/workout_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:text="@string/title_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/workout_name"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25dp"
        android:padding="5dp"
        android:background="#ff0011ff"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/workout_desc"
        android:id="@+id/textView6"
        android:textSize="15dp"
        android:layout_below="@+id/workout_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/workout_rep_label"
        android:id="@+id/textView7"
        android:layout_marginTop="32dp"
        android:textSize="20dp"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_dec_label"
        android:id="@+id/button5"
        android:layout_alignBottom="@+id/editText"
        android:layout_toLeftOf="@+id/editText"
        android:layout_toStartOf="@+id/editText" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="25"
        android:numeric="integer"
        android:textAlignment="center"
        android:onClick="toSummary"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_inc_label"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/editText"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/workout_weight_label"
        android:id="@+id/textView8"
        android:layout_marginTop="22dp"
        android:textSize="20dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:text="25"
        android:numeric="integer"
        android:textAlignment="center"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_dec_label"
        android:id="@+id/button7"
        android:layout_alignBottom="@+id/editText2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_inc_label"
        android:id="@+id/button8"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_next"
        android:id="@+id/button9"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
