<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.brandon.rika.ffr.NewWorkout">

    <TextView android:text="@string/new_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_pagename"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_bodypart"
        android:id="@+id/textView"
        android:background="#ff0015ff"
        android:textColor="#ffffffff"
        android:padding="5dp"
        android:password="false"
        android:singleLine="false"
        android:textStyle="bold"
        android:layout_below="@+id/new_pagename"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/new_list_bodypart"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_equipment"
        android:id="@+id/textView2"
        android:background="#ff0015ff"
        android:textColor="#ffffffff"
        android:padding="5dp"
        android:password="false"
        android:singleLine="false"
        android:textStyle="bold"
        android:layout_below="@+id/new_list_bodypart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/new_list_equipment"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_start"
        android:onClick="startWorkout"
        android:id="@+id/button3"
        android:layout_below="@+id/new_list_equipment"
        android:layout_alignLeft="@+id/new_pagename"
        android:layout_alignStart="@+id/new_pagename" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_reroll"
        android:onClick="rerollWorkout"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignRight="@+id/new_pagename"
        android:layout_alignEnd="@+id/new_pagename" />

</RelativeLayout>
